# appose-python

./: .gitignore  .mailmap  Makefile  README.md  appose.pom  dev-environment.yml  environment.yml  pyproject.toml  test_thread_exit.py
.github/workflows/: build.yml
src/appose/: __init__.py  _version.py  builder.py  environment.py  filepath.py  paths.py  platform.py  python_worker.py  scheme.py  service.py  shm.py  syntax.py  types.py
src/appose/builder/: __init__.py  mamba.py  pixi.py  uv.py
src/appose/tool/: __init__.py  mamba.py  pixi.py  uv.py
src/appose/util/: __init__.py  download.py  environment.py  filepath.py  message.py  platform.py  process.py  proxy.py  types.py
tests/: test_appose.py  test_base.py  test_builder_base.py  test_mamba_builder.py  test_pixi_builder.py  test_python_worker.py  test_service.py  test_shm.py  test_simple_builder.py  test_syntax.py  test_task_exception.py  test_types.py  test_uv_builder.py  test_wrap.py
tests/builder/: test_content.py  test_mamba.py  test_pixi.py  test_simple.py  test_uv.py  test_wrap.py
tests/util/: __init__.py  test_filepath.py  test_message.py  test_types.py
