[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "appose"
version = "0.1.0"
description = "Appose: multi-language interprocess cooperation with shared memory."
license = {text = "Simplified BSD License"}
authors = [{name = "Appose developers"}]
readme = "README.md"
keywords = ["java", "javascript", "python", "cross-language", "interprocess"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Java Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# NB: Keep this in sync with environment.yml AND dev-environment.yml!
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
# NB: Keep this in sync with dev-environment.yml!
dev = [
    "autopep8",
    "black",
    "build",
    "flake8",
    "flake8-pyproject",
    "flake8-typing-imports",
    "isort",
    "pytest",
    "numpy",
    "toml",
    "validate-pyproject[all]",
]

[project.urls]
homepage = "https://github.com/apposed/appose-python"
documentation = "https://github.com/apposed/appose-python/blob/main/README.md"
source = "https://github.com/apposed/appose-python"
download = "https://pypi.org/project/appose-python"
tracker = "https://github.com/apposed/appose-python/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# Thanks to Flake8-pyproject, we can configure flake8 here!
[tool.flake8]
exclude = ["bin", "build", "dist"]
extend-ignore = ["E203"]
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
max-line-length = 88
min_python_version = "3.10"
 
[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-s -p no:faulthandler"
